--- a/my-project/index.html
+++ b/my-project/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>myjd-mpvue</title>
+    <title>需求宝</title>
   </head>
   <body>
     <div id="app"></div>
